# g10kz

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DECISIONS.md  DEV_PLAN.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  build_and_deploy.sh  deploy.sh  docker-compose.yml
.github/workflows/: ci.yml
crates/g10kz-bot/: Cargo.toml
crates/g10kz-bot/src/: main.rs
crates/g10kz-config/: Cargo.toml
crates/g10kz-config/src/: lib.rs
crates/g10kz-discord/: Cargo.toml
crates/g10kz-discord/src/: commands.rs  handler.rs  lib.rs  state.rs  transcript.rs  util.rs
crates/g10kz-engine/: Cargo.toml
crates/g10kz-engine/src/: embed_router.rs  lib.rs  prompt_guard.rs  stage.rs  tracer.rs  turn.rs
crates/g10kz-everos/: Cargo.toml
crates/g10kz-everos/src/: lib.rs  memory.rs
crates/g10kz-kernel/: Cargo.toml
crates/g10kz-kernel/proptest-regressions/: normalize.txt
crates/g10kz-kernel/src/: guard.rs  kaomoji_db.json  kaomoji_pools.json  lib.rs  normalize.rs  persona.rs  personality.rs  proactive.rs  reject.rs  route.rs  sanitize.rs
crates/g10kz-llm/: Cargo.toml
crates/g10kz-llm/src/: fusion.rs  lib.rs  mock.rs  openrouter.rs  provider.rs  serialize.rs  types.rs
crates/g10kz-tools/: Cargo.toml
crates/g10kz-tools/src/: builtins.rs  lib.rs  loop.rs  media.rs  tool.rs
crates/prompt-guard/: Cargo.toml  pg_server.py
crates/prompt-guard/src/: main.rs
docs/: prompt-token-optimization.md
persona/: g10kz.json
persona/okf/: examples.md  index.md  log.md
persona/okf/lore/: creator.md
scripts/: smoke_test.sh
