[package]
name        = "g10kz-everos"
description = "EverOS HTTP sidecar client — Memory trait, circuit breaker. L2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
g10kz-config = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
