[package]
name        = "g10kz-kernel"
description = "Pure-function validation kernel — no I/O, fully testable. L1"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
g10kz-config = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
unicode-normalization = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
