[package]
name        = "g10kz-llm"
description = "Provider trait, message types, OpenRouter client, Fusion. L1"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
g10kz-config = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
futures      = { workspace = true }
reqwest      = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
