[package]
name        = "g10kz-tools"
description = "Tool trait, ToolBox registry, tool loop, media pre-processing. L2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
g10kz-config = { workspace = true }
g10kz-llm    = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
futures      = { workspace = true }
chrono       = { workspace = true }
base64       = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
